--- a/journal/201902.md
+++ b/journal/201902.md
@@ -48,10 +48,11 @@ Discussion [started](https://github.com/decred/dcrdata/issues/1022) how to calcu
 
 [decred.org](https://github.com/decred/dcrweb): content and translations updates. Implementation of the News and Posts page [started](https://github.com/decred/dcrweb/issues/561).
 
-First results of the [bug bounty](https://bounty.decred.org/) program: as of Mar 3, a total of 27 reports were submitted, 2 are eligible for payout ($72 and $90) of which 1 was already claimed and another one is awaiting reply from the submitter.
+First results of the [bug bounty](https://bounty.decred.org/) program: as of Mar 3, a total of 27 reports were submitted of which 2 are vulnerabilities eligible for payout ($72 and $90).
 
 Other:
 
+* Interesting detail in @matheusd's [blog](https://matheusd.com/post/dcp0004-and-hardforks/) about DCP0004: Decred's PoS component can serve as an extra protection from unintended consensus bugs.
 * [voting.decred.org](https://voting.decred.org/) dashboard now shows past agendas too. jQuery was [removed](https://github.com/decred/hardforkdemo/pull/213) to the delight of those who understand.
 * Replacement of Google reCAPTCHA with self-hosted solution was [merged](https://github.com/decred/dcrstakepool/pull/281) - huge step in improving [stakeholder's privacy](https://github.com/xaur/decred-issues/issues/25). Thanks to all developers and testers of this patch.
 * Trivia: did you know that Decred heavily [discourages](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15497657664963CvzUr:decred.org) creation of dust outputs?
@@ -129,15 +130,19 @@ Nodes: As of Mar 1 there were 205 public listening nodes and 297 normal nodes pe
 
 [Upgrade thresholds](https://voting.decred.org/) for PoW and PoS were met and the consensus vote locked in to start around Mar 14. Thanks to everybody who upgraded their nodes, and also to people who reached out to PoW pool and VSP operators via different channels and asked them to upgrade.
 
+The vote did not start yet but block votes already signal their choices for `fixlnseqlocks` agenda. As of Mar 4 there [were](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$155168912215429iStcp:decred.org) 8,503 Yes and 1 No vote. "Dat contrarian... At least it's proof that the no button works." - @jz.
+
 ## Integrations
 
 VSP codenamed "Bravo" was [renamed](https://github.com/decred/dcrwebapi/pull/59) from dcr.stakepool.net to [dcr.blue](https://dcr.blue/).
 
 Exchange integrations:
 
-* [Vertbase](https://www.vertbase.com/) added DCR/USD pair. Vertbase CEO and cofounder Justin joined #general and [answered questions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155015221011045eRXdT:decred.org). Among the answers were: Vertbase supports 39 of the 50 U.S. states, is actively working to add GBP/EUR/AUD trading, and uses 3rd party to handle ID verification. An interesting feature of Vertbase is very short duration of custody: they will send tokens directly to your wallet once bank transfer settles. See also this [Reddit post](https://www.reddit.com/r/decred/comments/aqkl1p/vertbase_lists_decred_dcr_with_us_dollar_usd/).
+* [Vertbase](https://www.vertbase.com/) added DCR/USD pair. Vertbase CEO and cofounder Justin joined #general and [answered questions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155015221011045eRXdT:decred.org). Among the answers were: Vertbase supports 39 of the 50 U.S. states, is actively working to add GBP/EUR/AUD trading, and uses 3rd party to handle ID verification. An interesting feature of Vertbase is very short duration of custody: they will send tokens directly to your wallet once bank transfer settles.
 
   > We also require you to provide a wallet address because we don't want to hold nor do we want you to hold your cryptocurrency on our platform. Be your own bank! (@Justin in [#general](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155017217111507BsAmt:decred.org))
+
+  As of Mar 8, sell orders are not available. See also this [Reddit post](https://www.reddit.com/r/decred/comments/aqkl1p/vertbase_lists_decred_dcr_with_us_dollar_usd/).
 
 * [Lykke](https://www.lykke.com/) [added](https://twitter.com/lykke/status/1095352586545319937) DCR pairs with BTC and USD.
 * [ChainRift](https://www.chainrift.com/) integrated DCR.
@@ -183,7 +188,7 @@ Long [discussion](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$1549886236
 Attended:
 
 * [TabConf](https://tabconf.com/) in Atlanta, USA. @joshuam [noted](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15497319564677Cmutw:decred.org): "Tabconf was awesome. Extremely engaged audience - best questions I have received at a conference to date".
-* [Campus Party](http://brasil.campus-party.org/cpbr12/patrocinadores/) in Sao Paulo, Brazil. About 60,000 people passed through the event which was running 24 hours a day for 6 days. Decred was the only cryptocurrency participating officially and with an exclusive space to present lectures and classes. All Brazilian developer contractors attended and presented a total of 6 talks and 3 workshops. @jy-p presented [Cryptocurrency Security and Adaptability](https://www.youtube.com/watch?v=SMiHku6GGmI). There were a few problems like Decred's zone moved and reduced (happened to almost all participants) and poor organization of translations - all taken into account for future planning. See [full report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155197422519492anwor:decred.org) by @emiliomann and [notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155197226472913itWWu:matrix.org) by @matheusd.
+* [Campus Party](http://brasil.campus-party.org/cpbr12/patrocinadores/) in Sao Paulo, Brazil. About 60,000 people passed through the event which was running 24 hours a day for 6 days. Decred was the only cryptocurrency participating officially and with an exclusive space to present lectures and classes. All Brazilian developer contractors attended and presented a total of 6 talks and 3 workshops. @jy-p presented [Cryptocurrency Security and Adaptability](https://www.youtube.com/watch?v=SMiHku6GGmI). There were a few problems like Decred's zone moved and reduced (happened to almost all participants) and poor organization of translations - all taken into account for future planning. See [full report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155200602520229ditLj:decred.org) by @emiliomann and [notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155197226472913itWWu:matrix.org) by @matheusd.
 * Love Night in Ghana. Organized by @George Pro. Since about 90% of participants knew about Bitcoin, presenters could skip the basics and highlight unique features of Decred. One popular question was where DCR can be exchanged to local currency. ([photos](https://twitter.com/deCRED_Ghana/status/1096714039978266624))
 * [How To Keep Your Crypto Secure](https://www.meetup.com/Decred-Australia/events/258211699/) in Melbourne, Australia. Australia's cryptocurrency enthusiasts discussed best security practices and Decred's security standards. @Zohand [noted](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15504942691141LtOxa:decred.org): "Feedback was awesome, and the guys from coinstop and CTRL want to run the event again in a couple of months.". ([photos](https://twitter.com/DecredAustralia/status/1097478053763018752))
 * [Decred in 30 minutes](https://www.eventbrite.com/e/decred-en-30-minutos-tickets-55764142050) in Mexico City, Mexico. @elian [reported](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15517155592047249xtYGy:matrix.org): "It was the first meetup where everyone knew about Decred quite well, we were 7 in total. The presentation went faster because attendees knew most of the fundamental content in advance so we went to discuss more complex issues like what are the challenges to decentralized governance, best way to stake tickets and future developments that are happening in the project like LN, payments integration and the most recent events, marketing and community proposals in Politeia. Was very nice to meet proper DCR enthusiasts in Mexico. (...) I think we are far from seeing cc as MoE in Mexico but definitely the space is moving fast. At the moment there are more Mexicans in contact with crypto than with the stocks markets in the country, this is a very good indicator.". ([photos](https://twitter.com/DecredESP/status/1102594478664232960))
@@ -286,7 +291,7 @@ The NEM Foundation's funding proposal [started](https://forum.nem.io/t/nem-found
 
 The Aragon Transparency Report for Q4 2018 was [released](https://blog.aragon.org/aragon-q4-2018-transparency-report/). This report presents a detailed breakdown of spending related to the project. The total spent in Q4 2018 was ~€1,055,484.43 or equivalent in cryptocurrency, with €268K on salaries, €330K on payments to service providers, €45K on sponsoring/tickets for events, €63K on hosting the AraCon conference and €260K on [Nest](https://github.com/aragon/nest) teams (a grants program). This report also describes financial [hedging](https://twitter.com/AragonProject/status/1067349802365739008) steps which have been taken by Aragon Association - exchanging some of the ETH raised during the ICO to buy other assets.
 
-The blacklist issued by the EOS Core Arbitration Forum (ECAF) in Jun 2018 was allowed to [lapse](https://medium.com/@eos42/proposed-solution-for-a-broken-blacklist-ce1c18bdf81c) when a new Block Producer was rotated in which had not configured the blacklist. This allowed one of the addresses on the blacklist to move over 2 million EOS. The lapse occurred because the blacklist has been implemented as a list of addresses from which block producers will not process transactions, with each block producer being responsible for maintaining the blacklist manually. If only one top 21 BP does not have an updated blacklist, blacklisted accounts are vulnerable to being emptied.
+The blacklist issued by the EOS Core Arbitration Forum (ECAF) in Jun 2018 was allowed to [lapse](https://medium.com/@eos42/proposed-solution-for-a-broken-blacklist-ce1c18bdf81c) when a new Block Producer was rotated in which had not configured the blacklist. This allowed one of the addresses on the blacklist to move over 2 million EOS. The lapse occurred because the blacklist has been implemented as a list of addresses from which block producers will not process transactions, with each block producer being responsible for maintaining the blacklist manually. If only one top 21 BP does not have an updated blacklist, blacklisted accounts are vulnerable to being emptied. One solution that has been suggested is to "null the keys" until a decision has been made about what to do with the frozen funds. What to do with the blacklisted funds is already an issue for EOS, and the ECAF itself may be disbanded if an open referendum to "Delete the ECAF" passes (currently on 99% Yes with 2.4% of EOS having voted).
 
 Binance is [launching](https://www.theblockcrypto.com/2019/02/07/binance-moves-away-from-ethereum-as-it-prepares-to-launch-dex/) its DEX based on Cosmos' Tendermint protocol and DPoS. The listing fee will "probably be close to $100,000" to "reduce the number of spam or scam projects". In contrast, Decred's DEX design has no listing fees and doesn't require an extra blockchain for its operation.
 
