--- a/journal/201902.md
+++ b/journal/201902.md
@@ -79,12 +79,12 @@ Congratulations to 3 Ditto contractors [listed](https://github.com/decred/dcrweb
 
 ## Governance
 
-In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,878 DCR and spent 17,311 DCR, making it the first month with negative net total (per dcrdata). Using February's daily average DCR/USD rate of ${}, this is ${}K received and ${}K spent. As these payments were for work completed in January, it is also informative to consider them in the context of the January average daily rate of $17.05 - in which case the USD received/spent figures are $254K/$295K. As of {}, Treasury balance is {} DCR ({} USD at ${}).
+In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,878 DCR and spent 17,311 DCR, making it the first month with negative net total (per dcrdata). Using February's daily average DCR/USD rate of ${}, this is ${}K received and ${}K spent. As these payments were for work completed in January, it is also informative to consider them in the context of the January average daily rate of $17.05 - in which case the USD received/spent figures are $254K/$295K. As of {publish date}, Treasury balance is {} DCR ({} USD at ${}).
 
-Proposal status as of {}:
+Proposal status as of {publish date}:
 
 * [Baeond card game](https://proposals.decred.org/proposals/f545b359fcf1b40b356e9cb556cb422cc7ff01b628b577f804cdc45ce414f5dd) by burst was rejected by 97% No votes of 29% participated tickets _(missed in Jan issue)_.
-* [Decentralized exchange RFP](https://proposals.decred.org/proposals/5431da8ff4eda8cdbf8f4f2e08566ffa573464b97ef6d6bae78e749f27800d3a) by @jy-p received 70 comments and a 2nd edition that reduced the scope of the MVP and capped the cost at $250K (down from $1M). @bee published a personal pros-cons [analysis](https://github.com/xaur/decred-proposals/blob/master/decred-dex-rfp-analysis.md). The proposal also spurred a [discussion](https://www.reddit.com/r/DCR/comments/awbtbr/should_treasury_funded_marketing_resources_be/) about whether the Treasury should fund promotion of proposals like this. Voting started with {}% Yes votes among {}% tickets as of {}.
+* [Decentralized exchange RFP](https://proposals.decred.org/proposals/5431da8ff4eda8cdbf8f4f2e08566ffa573464b97ef6d6bae78e749f27800d3a) by @jy-p received 70 comments and a 2nd edition that reduced the scope of the MVP and capped the cost at $250K (down from $1M). @bee published a personal pros-cons [analysis](https://github.com/xaur/decred-proposals/blob/master/decred-dex-rfp-analysis.md). The proposal also spurred a [discussion](https://www.reddit.com/r/DCR/comments/awbtbr/should_treasury_funded_marketing_resources_be/) about whether the Treasury should fund promotion of proposals like this. Voting started with {}% Yes votes among {}% tickets as of {publish date}.
 * [Wallet tutorials](https://proposals.decred.org/proposals/a3def199af812b796887f4eae22e11e45f112b50c2e17252c60ed190933ec14f) by Denni Lovejoy of Cryptocurrency.Market was published after multiple iterations and feedback collection in [chats](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154941035930084kFSjY:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/anksg2/proposed_statement_of_work_sow_for_decred/). The budget of $750 was approved with 80% Yes votes and participation of 24% tickets.
 * [Events funding for 2019](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) by @Dustorf was submitted after previews in [chat](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154896889724431Mxlvj:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/anhh8n/proposal_to_get_events_spending_approved_via/). Voting finished with the approval of a $200K budget by 89% Yes votes with 34% tickets voting.
 * [Marketing funding for 2019](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) proposal by @Dustorf was extensively discussed in 68 comments, in addition to [chat](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154897255124536mFHoo:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/aolr79/politeia_proposal_to_fund_marketing_ops_for_2019/) rounds preceding the proposal. The budget of $290K was approved by 83% Yes votes with 36% of tickets voting.
@@ -303,10 +303,10 @@ Android malware was [discovered](https://www.welivesecurity.com/2019/02/08/first
 
 ## About This Issue
 
-This is the {}th issue of Decred Journal. Index of all issues, mirrors and translations is available [here](https://xaur.github.io/decred-news/).
+This is the 11th issue of Decred Journal. Index of all issues, mirrors and translations is available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
 Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): {}. Special thanks to @saender for producing abstract art images.
+Credits (alphabetical order): bee, davecgh, degeri, Dustorf, emiliomann, guang, liz_bagot, matheusd, raedah, richardred. Special thanks to saender for abstract art images.
