minor review edits

--- a/journal/201902.md
+++ b/journal/201902.md
@@ -114,7 +114,7 @@ Discussion started to amend Decred Constitution and ratify the new version with 
 
 A new [@pi_crumbs](https://twitter.com/pi_crumbs) Twitter account notifies its followers when proposals are created or modified, and when voting starts or finishes. Currently operated manually by @richardred, but automation is discussed.
 
-Another account called [@slices_of_pi](https://twitter.com/slices_of_pi) posts commentary on Politeia activity written by human.
+Another account called [@slices_of_pi](https://twitter.com/slices_of_pi) posts commentary on Politeia activity written by a human.
 
 For greater detail, analysis and commentary see @richardred's excellent Politeia Digest [issue 10](https://medium.com/politeia-digest/issue-10-jan-1-feb-18-2018-202cde71a19d) and [issue 11](https://medium.com/politeia-digest/issue-11-feb-19-feb-28-2019-46befddb09fe) which the above summary is based on.
 
@@ -149,11 +149,11 @@ Exchange integrations:
 * [Livecoin](https://www.livecoin.net/) [added](https://twitter.com/livecoin_net/status/1098151449786118144) DCR pairs with BTC, ETH and USD.
 * [BitMesh](https://bitmesh.com/) [launched](https://www.reddit.com/r/decred/comments/av8a69/bitmesh_has_launched_dcr_and_opened_dcrbtc/) DCR pairs with BTC and USDT.
 
-Warning: the authors of Decred Journal have no idea about which of the above are scams. Please do your own research [before](https://twitter.com/yeppoon/status/1095857386709893120) trusting your personal information or assets to any entity.
+Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the exchanges above. Please do your own research [before](https://twitter.com/yeppoon/status/1095857386709893120) trusting your personal information or assets to any entity.
 
 ## Adoption
 
-CoinFund [announced](https://blog.coinfund.io/announcing-grassfed-network-and-decred-staking-pool-with-placeholder-55a32a312710) Grassfed Network, an initiative that uses 'generalized mining' to directly participate in decentralized network. The story was featured in [CoinDesk](https://www.coindesk.com/these-cryptofunds-say-generalized-mining-is-the-new-way-to-invest).
+CoinFund [announced](https://blog.coinfund.io/announcing-grassfed-network-and-decred-staking-pool-with-placeholder-55a32a312710) Grassfed Network, an initiative that uses 'generalized mining' to directly participate in decentralized networks. The story was featured in [CoinDesk](https://www.coindesk.com/these-cryptofunds-say-generalized-mining-is-the-new-way-to-invest).
 
 Any activity that is compensated with on-protocol rewards denominated in network assets can be seen as [generalized mining](https://grassfed.network/mining/). Following this approach investors can directly engage in the networks and generate additional returns, compared to just speculating on the value of cryptoassets.
 
@@ -161,7 +161,7 @@ Per the announcement, CoinFund partnered with [Placeholder](https://www.placehol
 
 ## Outreach
 
-In February, @Dustorf proposed and passed his plans for [marketing](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) and [events](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) for the remainder of 2019. This is an exciting development that further decentralizes Decred by shifting more direct over spending to the stakeholders. There was vigorous discussion and many good questions, but the proposals were approved by 83% and 89% of participating tickets.
+In February, @Dustorf proposed his plans for [marketing](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) and [events](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) for the remainder of 2019 and these were passed by stakeholder voting. This is an exciting development that further decentralizes Decred by shifting more direct control over spending to the stakeholders. There was vigorous discussion and many good questions, but the proposals were approved by 83% and 89% of tickets that voted.
 
 With an approved budget, work began in earnest on the scope of the proposals. Planning is underway on NYC Blockchain Week, which coincides with Consensus. More information should be announced within two weeks on these plans.
 
@@ -203,7 +203,7 @@ Upcoming:
 * [Berlin Blockchain Week](https://www.berlin-blockchain-week.com/) in Berlin, Germany on Mar 27. @karamble will be speaking.
 * [Jalisco Talent Land](https://www.talent-land.mx/#entradas) in Guadalajara, Mexico on Apr 22-26. Contact @elian for details.
 
-As noted in Governance above, stakeholders approved a $200K budget for [2019 events](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509), which includes 3 large scale events and ~20 smaller events.
+As noted in Governance above, stakeholders approved a $200K budget for [2019 events](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509), which includes a strong presence at 3 large scale events and attendance at a number of smaller events.
 
 ## Media
 
