--- a/journal/201902.md
+++ b/journal/201902.md
@@ -211,7 +211,7 @@ Selected articles:
 
 * Decred evaluation by TokenGazer (Chinese, [qq.com](https://mp.weixin.qq.com/s/7rMaTYXIhIpO37qiIvJX_A), _missed in Jan issue_) - Decred was rated 4.2
 * Which one is the best cryptocurrency next to bitcoin? answer by Pavel Svitek ([quora.com](https://www.quora.com/Which-one-is-the-best-cryptocurrency-next-to-bitcoin/answer/Pavel-Svitek)) - thanks to Pavel for presenting Decred to Quora
-* No More Trading Or Listing Fees? Decred Releases New DEX Proposal by Leslie Ankne ([forbes.com](https://www.forbes.com/sites/leslieankney/2019/02/04/no-more-trading-or-listing-fees-decred-releases-new-dex-proposal/))
+* No More Trading Or Listing Fees? Decred Releases New DEX Proposal by Leslie Ankney ([forbes.com](https://www.forbes.com/sites/leslieankney/2019/02/04/no-more-trading-or-listing-fees-decred-releases-new-dex-proposal/))
 * How Long Will Crypto Winter Last? We Asked Three Experts by Julia Herbst ([breakermag.com](https://breakermag.com/what-the-longest-ever-bear-market-means-for-crypto/))
 * As Decred Turns Three, It's Still Set on Real Decentralization by David Z. Morris ([breakermag.com](https://breakermag.com/as-decred-turns-three-its-still-set-on-real-decentralization/)
 * Decred Founder Proposes Building DEX as Alternative to Binance (Interview) by Liam Kelly ([cryptoslate.com](https://cryptoslate.com/decred-founder-proposes-dex-binance-interview/))
@@ -242,7 +242,7 @@ Community stats as of Mar 1-2:
 * Reddit subscribers: 9,365 (+35)
 * Matrix users: 266 (+19)
 * Slack users: 6,581 (+52)
-* Discord users: 2,101, can post: 131
+* Discord users: 2,101, verified to post: 131
 * Telegram users: 4,272 (-231)
 * YouTube subscribers: 3,746 (-6)
 * Facebook followers: 3,141 (+9), likes: 2,896 (+5)
@@ -309,4 +309,4 @@ Most information from third parties is relayed directly from source after a mini
 
 Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): bee, davecgh, degeri, Dustorf, emiliomann, guang, jholdstock, liz_bagot, matheusd, raedah. Special thanks to richardred for extensive overview of the crypto governance space, and to saender for abstract art images.
+Credits (alphabetical order): bee, davecgh, degeri, Dustorf, emiliomann, guang, jholdstock, liz_bagot, matheusd, raedah, sambiohazard. Special thanks to richardred for extensive overview of the crypto governance space, and to saender for abstract art images.
