Add discussion links

--- a/journal/201902.md
+++ b/journal/201902.md
@@ -84,10 +84,10 @@ In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4Dh
 Proposal status as of Mar 9:
 
 * [Baeond card game](https://proposals.decred.org/proposals/f545b359fcf1b40b356e9cb556cb422cc7ff01b628b577f804cdc45ce414f5dd) by burst was rejected by 97% No votes of 29% participated tickets _(missed in Jan issue)_.
-* [Decentralized exchange RFP](https://proposals.decred.org/proposals/5431da8ff4eda8cdbf8f4f2e08566ffa573464b97ef6d6bae78e749f27800d3a) by @jy-p received 70 comments and a 2nd edition that reduced the scope of the MVP and capped the cost at $250K (down from $1M). @bee published a personal pros-cons [analysis](https://github.com/xaur/decred-proposals/blob/master/decred-dex-rfp-analysis.md). The proposal also spurred a [discussion](https://www.reddit.com/r/DCR/comments/awbtbr/should_treasury_funded_marketing_resources_be/) about whether the Treasury should fund promotion of proposals like this. Voting started with 91.4% Yes votes among 8K tickets as of Mar 9.
+* [Decentralized exchange RFP](https://proposals.decred.org/proposals/5431da8ff4eda8cdbf8f4f2e08566ffa573464b97ef6d6bae78e749f27800d3a) by @jy-p received 82 comments on Politeia, [11 comments](https://www.reddit.com/r/decred/comments/ancxgx/rfp_decred_decentralized_exchange_infrastructure/) on Reddit, and a 2 revisions that reduced the scope of the MVP and capped the cost at $250K (down from $1M). @bee published a personal pros-cons [analysis](https://github.com/xaur/decred-proposals/blob/master/decred-dex-rfp-analysis.md). The proposal also spurred a [discussion](https://www.reddit.com/r/DCR/comments/awbtbr/should_treasury_funded_marketing_resources_be/) about whether the Treasury should fund promotion of proposals like this. Voting started with 91.4% Yes votes among 8K tickets as of Mar 9.
 * [Wallet tutorials](https://proposals.decred.org/proposals/a3def199af812b796887f4eae22e11e45f112b50c2e17252c60ed190933ec14f) by Denni Lovejoy of Cryptocurrency.Market was published after multiple iterations and feedback collection in [chats](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154941035930084kFSjY:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/anksg2/proposed_statement_of_work_sow_for_decred/). The budget of $750 was approved with 80% Yes votes and participation of 24% tickets.
 * [Events funding for 2019](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) by @Dustorf was submitted after previews in [chat](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154896889724431Mxlvj:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/anhh8n/proposal_to_get_events_spending_approved_via/). Voting finished with the approval of a $200K budget by 89% Yes votes with 34% tickets voting.
-* [Marketing funding for 2019](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) proposal by @Dustorf was extensively discussed in 68 comments, in addition to [chat](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154897255124536mFHoo:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/aolr79/politeia_proposal_to_fund_marketing_ops_for_2019/) rounds preceding the proposal. The budget of $290K was approved by 83% Yes votes with 36% of tickets voting.
+* [Marketing funding for 2019](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) proposal by @Dustorf was extensively discussed in 68 comments, in addition to [chat](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154897255124536mFHoo:decred.org) and 44 Reddit [comments](https://www.reddit.com/r/decred/comments/aolr79/politeia_proposal_to_fund_marketing_ops_for_2019/) preceding the proposal. The budget of $290K was approved by 83% Yes votes with 36% of tickets voting.
 * [Decred ATM integration](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) proposal by @oregonisaac is a result of many weeks of research, drafts and feedback since the discussion of Bcash ATM [proposal](https://proposals.decred.org/proposals/bb7e19283d5c65fed598d5a2f4afcc2b5d2eab187b9cb84fc4304430f80b5ad1) in Nov 2018. Current proposal asks stakeholder opinion whether to proceed with planning. If approved, another proposal will be submitted with particular details of implementation. Voting not started.
 * [Decred community website](https://proposals.decred.org/proposals/fb8e6ca361c807168ea0bd6ddbfb7e05896b78f2576daf92f07315e6f8b5cd83) by @karamble proposes a website that aggregates multiple sources of Decred-related content like articles, videos, podcasts, event reports and merchants. The prototype was already built by @karamble and the proposal seeks $6K to fund the site for 6 months. Voting finished with approval of 72.5% Yes votes, with votes by 33% of eligible tickets.
 * [Decred integration for IDAX exchange](https://proposals.decred.org/proposals/60adb9c0946482492889e85e9bce05c309665b3438dd85cb1a837df31fbf57fb) by acean seeks 1,000 DCR to add DCR/BTC trading pair to the IDAX exchange based in Mongolia. Voting finished and the proposal was rejected with 25% Yes votes, with 23.5% of tickets voting.
@@ -181,7 +181,11 @@ February update from Ditto:
 
 For more detail see Ditto's biweekly updates on [Feb 4](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154930816328395IaXDr:decred.org) and [Feb 15](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$155026927613161McEtC:decred.org).
 
-Long [discussion](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15498862365982zjzwP:decred.org) about perception and framing was triggered by a question whether to use word "bug" in public messaging for 1.4 release.
+Discussions:
+
+* Long [chat](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15498862365982zjzwP:decred.org) about perception and framing was triggered by a question whether to use word "bug" in public messaging for 1.4 release.
+* [Opinions](https://www.reddit.com/r/decred/comments/ans7lg/what_do_we_think_of_converting_decreds_ticker/) on changing Decred's ticket from DCR to CRED.
+* [Criticism](https://www.reddit.com/r/decred/comments/asg6kf/update_on_the_decred_14_release/) of the use of "lifeless corporate" style in announcements.
 
 ## Events
 
@@ -263,7 +267,9 @@ Comm systems news:
 * non-English chat rooms were renamed after language used in them for consistency, unused rooms were removed. [#chinese](https://matrix.to/#/!nUWpVrwhlJFyLuMlGw:decred.org), [#portuguese](https://matrix.to/#/!FBtUquQLhAvHeBIkac:decred.org), [#russian](https://matrix.to/#/!TQzfaYsKyxAqQDZQeX:decred.org) and [#spanish](https://matrix.to/#/!pkeRzinGCRtjIIhAAK:decred.org) are available in Matrix.
 * [Riot](https://riot.im/app/#/room/#general:decred.org) client was [upgraded](https://medium.com/@RiotChat/the-big-1-0-68fa7c6050be) to version 1.0 with a reworked UI.
 
-Another Reddit thread was [deleted](https://www.reddit.com/r/decred/comments/an4b6z/forbes_no_more_trading_or_listing_fees_decred/) after receiving some discussion. Moderators have no power to forbid this destruction of community knowledge, except the workaround to [resubmit](https://www.reddit.com/r/decred/comments/ar29jd/forbes_no_more_trading_or_listing_fees_decred/) the deleted thread. Ideas for robust replacement for Reddit are collected in [this issue](https://github.com/xaur/decred-issues/issues/38).
+Another Reddit thread was [deleted](https://www.reddit.com/r/decred/comments/an4b6z/forbes_no_more_trading_or_listing_fees_decred/) after receiving some discussion. Moderators have no power to forbid this destruction of community knowledge, except the workaround to [resubmit](https://www.reddit.com/r/decred/comments/ar29jd/forbes_no_more_trading_or_listing_fees_decred/) the deleted thread. Ideas for more persistent Reddit-like forum are collected in [this issue](https://github.com/xaur/decred-issues/issues/38).
+
+"Decred's community spaces - a crude analogy" [post](https://www.reddit.com/r/decred/comments/api7e7/decreds_community_spaces_a_crude_analogy/) by @richardred compares multiple comm platforms used by the Decred community. The follow-up discussion noted problems of keeping up with chats, the importance of having a vibrant Reddit community, and issues with proposal discussions outside Politeia.
 
 ## Markets
 
