--- a/journal/201902.md
+++ b/journal/201902.md
@@ -204,7 +204,7 @@ Upcoming:
 
 * [Decred & OKCoin Present "The Next 10 Years: Crypto Boom, Bust, or Buidl?"](https://www.eventbrite.com/e/decred-okcoin-present-the-next-10-years-crypto-boom-bust-or-buidl-tickets-57549671617) in San Francisco, USA on Mar 12.
 * [Restoring Trust through Blockchain Governance](https://www.meetup.com/DecredCanada/events/259126224/) in Toronto, Canada on Mar 16.
-* [Berlin Blockchain Week](https://www.berlin-blockchain-week.com/) in Berlin, Germany on Mar 27. @karamble will be speaking.
+* [Crypto Conference 2019](https://crypto-conference.com/) in Berlin, Germany on Mar 27. The event is part of [Berlin Blockchain Week](https://www.berlin-blockchain-week.com/). @karamble will talk "Adaptability in Digital Currencies".
 * [Jalisco Talent Land](https://www.talent-land.mx/#entradas) in Guadalajara, Mexico on Apr 22-26. Contact @elian for details.
 
 As noted in Governance above, stakeholders approved a $200K budget for [2019 events](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509), which includes a strong presence at 3 large scale events and attendance at a number of smaller events.
@@ -229,10 +229,12 @@ Videos:
 * Decred AMA TruStory - Preethi Kasireddy chats with Isaac J and Matheus of Decred to learn more about the hybrid proof of work/proof of stake consensus mechanism and their governance model ([youtube](https://www.youtube.com/watch?v=OKdaa630YDk))
 * Cryptocurrency Security and Adaptability - talk by @jy-p at Campus Party Brazil ([youtube](https://www.youtube.com/watch?v=SMiHku6GGmI))
 * The Potential of Decentralization - interview with @jy-p for BlockTV ([blocktv.com](https://blocktv.com/watch/2019-02-20/5c6d6a2be03e3-chain-breakers-promoting-constant-disruption-))
+* Mentioned by Chris DeRose in an [interview](https://www.youtube.com/watch?v=W1tbPQOMxH8&t=3790) to Crypto Insider
 
 Audio:
 
 * ITK Crypto #8 - Tom White and Crypto SI speak to @kozel about crypto governance ([youtube](https://www.youtube.com/watch?v=H-qZBsQY5BM))
+* Murad Mahmudov and Aleks Svetski talk about Bitcoin, Lightening and the current market outlook. "So I hope my Bitcoin ultra maximalist friends don't hear this but..." ([podplayer.net](http://podplayer.net/?id=64230840), starts at [1:36:45](http://podplayer.net/?id=64230840&t=5805))
 
 Translations:
 
