--- a/journal/201903.md
+++ b/journal/201903.md
@@ -122,7 +122,7 @@ Selected articles:
 
 Translations:
 
-* {}
+* Decred Journal - January 2019 [in Vietnamese](https://github.com/raedahgroup/decred-journal/blob/master/vietnamese/2019-01.md) by Duyên Em
 
 Videos:
 
