--- a/journal/201903.md
+++ b/journal/201903.md
@@ -10,13 +10,22 @@
 
 {order of reporting: changes released > merged to master > started work > discussions and future plans}
 
-[dcrd](https://github.com/decred/dcrd): {}
+[dcrd](https://github.com/decred/dcrd):
+
+* https://github.com/decred/dcrd/pull/1656
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
 [Decrediton](https://github.com/decred/decrediton): {}
 
-[Politeia](https://github.com/decred/politeia): {}
+[Politeia](https://github.com/decred/politeia):
+
+* {post-vote vote bug, explain}
+  * https://richardred0x.github.io/politeia-digest/issue-012.html
+
+Discussions:
+
+* yes-based quorum https://github.com/decred/politeia/issues/729
 
 [dcrandroid](https://github.com/decred/dcrandroid): {}
 
@@ -28,7 +37,9 @@ Trezor: {}
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
 
-[docs](https://github.com/decred/dcrdocs): {}
+[docs](https://github.com/decred/dcrdocs):
+
+* new [Ticket Splitting](https://docs.decred.org/proof-of-stake/ticket-splitting/) guide
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
@@ -51,6 +62,14 @@ Welcome to new first time contributors with code merged to master: {list people 
 {high level recap of decision-making activity, most important events, defer to Politeia Digest for the rest}
 
 In March the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {} DCR and spent {} DCR. Using {month}'s daily average DCR/USD rate of ${}, this is ${}K received and ${}K spent. As these payments were for work completed in Feb, it is also informative to consider them in the context of the Feb average daily rate of ${} - in which case the USD received/spent figures are ${}K/${}K. As of {date}, Treasury balance is {} DCR ({} million USD at ${}).
+
+Proposal updates:
+
+* Re-submission of Coffee Wallet [proposal](https://proposals.decred.org/proposals/45de9806c952c5ffc2fc6782fddbc74c852c26e3fb0e950144b92d75082c4731) after it was abandoned was [blocked](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$155144086813111EMAcC:decred.org) as an attempt to use Politeia to market the product.
+* India awareness https://www.reddit.com/r/decred/comments/awb5y0/preproposal_decred_india_community_new_user/
+  * In a chat discussion it was pointed out that a similar proposal was submitted for Dash https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15515162772723165JzrFj:matrix.org https://www.dash.org/forum/threads/building-commercial-dash-use-in-the-freelancing-industry-across-south-asia.17890/
+
+{decredcommunity not open source criticism chat}
 
 ## Network
 
@@ -76,7 +95,7 @@ Nodes: As of {date} there were {} public listening nodes and {} normal nodes per
 
 Exchange integrations:
 
-* {}
+* DCR/USD, DRC/BTC, and DCR/ETH https://twitter.com/OKCoin/status/1105892924586258434 https://medium.com/@OKCoin/decred-dcr-now-listed-on-okcoin-a7ea9adea7b7
 
 {OTC desks}
 
@@ -97,6 +116,8 @@ New merchants:
 ## Outreach
 
 {overview of outreach/communications/marketing activity for past month and any short-term plans}
+
+ditto biweekly mar 1 https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155148239113862OPjOD:decred.org
 
 ## Events
 
@@ -124,9 +145,12 @@ Selected articles:
 
 * https://medium.com/@NoahPierau/the-best-on-chain-governance-system-67759bf25335 (missed in Feb issue) {is it published now?}
 * https://www.smithandcrown.com/decred-deep-dive-report/ {}-page report
+* https://mp.weixin.qq.com/s/GTw2YJPyASJZNJf2ZP1WDw (CN)
 
 Translations:
 
+* Decred: Where did it all begin? [in Dutch](https://github.com/Arriu/Decred/blob/master/translations/wherediditallbegin_dutch.md) by @jazzah
+* Detailed analysis of Decred fork resistance [in Dutch](https://decredcommunity.org/nl/blog/detailed-analysis-of-decred-fork-resistance) by @jazzah
 * Decred Journal - January 2019 [in Vietnamese](https://github.com/raedahgroup/decred-journal/blob/master/vietnamese/2019-01.md) by Duyên Em
 
 Videos:
@@ -139,6 +163,7 @@ Audio:
 * https://blockcrunch.libsyn.com/how-does-decreds-governance-work-noah-pierau-decred-project
   * https://itunes.apple.com/us/podcast/how-does-decreds-governance-work-noah-pierau-decred-part-1/id1350649166?i=1000431532255&mt=2
   * https://open.spotify.com/episode/7xST0eTxy4xnaK6NILXcbx?si=o3AJJuLvQka7lnpT1BrzWw
+* https://letstalkbitcoin.com/blog/post/the-blockcrunch-defending-decreds-onchain-governance-part-2
 
 ## Community Discussions
 
@@ -179,6 +204,18 @@ In March DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate w
 
 ## Relevant External
 
+GitHub policy update, sanctions and export laws {dig the new restrictions}
+
+* https://github.blog/2019-03-14-githubs-site-policy-updates-are-ready-for-your-feedback/
+* unlike most companies, GitHub has all their policy documents versioned transparently in a Git repo that anybody can clone and inspect. Pending changes are in open pull requests: https://github.com/github/site-policy/pulls
+* Open to feedback until Apr 12, effective Apr 19
+* "visitors and residents of jurisdictions that are subject to U.S. sanctions "are prohibited from using IP proxies, VPNs, or other methods to disguise their location when accessing GitHub services and may only use GitHub for non-commercial, personal communications." https://github.com/github/site-policy/pull/157/commits/c16de92e373612538731a10810f3c525dbb73df7
+* GitHub now responds to DNT
+* updates on the use of third party user tracking services
+* more Google Analytics cookies https://github.com/github/site-policy/pull/154
+* For Decred this means result in restrictions on accepting contributions from people in countries sanctioned by the U.S. {correct? https://github.com/xaur/decred-issues/issues/125}
+* while unpleasant, the move is pretty common for a service that provides "free" services. Good moment to reflect on our beliefs about free stuff.
+
 {PoW, ASIC resistance, tech}
 
 {governance, funding, forks, chain splits, controversy}
@@ -187,6 +224,14 @@ In March DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate w
 
 * https://blog.dash.org/over-50-masternodes-registered-deterministic-masternode-list-31356e4e6c35
 * {better link} https://docs.dash.org/en/stable/masternodes/dip3-upgrade.html
+
+Dash layoffs amid bear market {expand interesting bits}
+
+* https://www.theblockcrypto.com/2019/03/04/corporation-behind-dash-lays-off-senior-staff-as-bear-market-grip-tightens/
+
+Grin
+
+* https://www.coindesk.com/privacy-cryptocurrency-grin-votes-to-fund-third-full-time-developer
 
 {DEX}
 
